Fixed css for example... part 1

--- a/example/index.html
+++ b/example/index.html
@@ -56,13 +56,13 @@
             });
         </script>
 <style>
-            .exampleTable > .snowcoders-responsive > table > tr > td {
+            .exampleTable > * > table > tr > td {
                 min-width: 100px;
             }
-            .exampleTable > .medium > *:nth-child(n+5) {
+            .exampleTable > .medium > table > tr > td:nth-child(n+5) {
                 display: none;
             }
-            .exampleTable > .small > *:nth-child(n+2) {
+            .exampleTable > .small > table > tr > td:nth-child(n+2) {
                 display: none;
             }
         </style>
