Fixed the knockout path dependency

--- a/example/index.html
+++ b/example/index.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.js"></script>
     <script>
         requirejs.config({
             baseUrl: './snowcoders-responsive',
             paths: {
+                "knockout": "https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min",
                 "text": 'https://cdnjs.cloudflare.com/ajax/libs/require-text/2.0.12/text'
             }
         });
